<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_in_container"
    tools:context="edu.tacoma.uw.css.haylee11.spookyboiz.SignInFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:fontFamily="serif-monospace"
        android:text="Spooky Scary Sightings"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="242dp"
        android:layout_height="262dp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username_text"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:padding="10dp"
        android:background="@drawable/border"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <Button
        android:id="@+id/create"
        style="@style/ButtonStyle"
        android:layout_width="203dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="Create Account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <Button
        android:id="@+id/sign_in"
        style="@style/ButtonStyle"
        android:layout_width="203dp"
        android:layout_height="44dp"
        android:layout_marginTop="475dp"
        android:fontFamily="serif-monospace"
        android:text="Sign In"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
