<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_menu"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="wow"
        app:showAsAction="always" >

        <menu>
            <item
                android:id="@+id/action_info"
                android:title="About"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_logout"
                android:title="@string/action_logout"
                app:showAsAction="ifRoom" />
        </menu>


    </item>

</menu>