...

    <string name="action_settings">Settings</string>

    <string name="LOGIN_PREFS">edu.tacoma.uw.css.haylee11.spookyboiz.PREFS</string>
    <string name="LOGGEDIN">loggedIn</string>
    <string name="CURRENT_USER">user</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_course">CourseActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sighting_local">Map</string>
    <string name="title_activity_signed_in">SignedInActivity</string>
...
